package ca.mcmaster.cas.se2aa4.a2.island.color;

import java.awt.*;

public interface ColorGenerator {
    /**
     *
     * @return The {@link Color} belonging to this tile
     */
    Color generateColor();
}
